Fix search overlap

--- a/sass/side.scss
+++ b/sass/side.scss
@@ -273,6 +273,8 @@ button {
         margin: 0;
         padding: 4px;
         line-height: 30px;
+        position: relative;
+        z-index: 1;
     }
 }
 
